Implemented EulerAngle-Calculation algorithm to obtain current rotation of a camera.

--- a/src/Kingo.Windows.DemoApp/01.Kingo.Windows.DemoApp.csproj
+++ b/src/Kingo.Windows.DemoApp/01.Kingo.Windows.DemoApp.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6D7ED4E7-2C1F-496C-BEE8-7BA56F724D35}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kingo.Wpf.DemoApp</RootNamespace>
-    <AssemblyName>Kingo.Wpf.DemoApp</AssemblyName>
+    <RootNamespace>Kingo.Windows.DemoApp</RootNamespace>
+    <AssemblyName>Kingo.Windows.DemoApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -41,8 +41,16 @@
     <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -88,11 +96,12 @@
       <Link>Properties\Kingo.snk</Link>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Kingo.Wpf\03.Kingo.Wpf.csproj">
+    <ProjectReference Include="..\Kingo.Windows\03.Kingo.Windows.csproj">
       <Project>{7ab49a38-4b7e-487e-bda3-e01dc21f31aa}</Project>
-      <Name>03.Kingo.Wpf</Name>
+      <Name>03.Kingo.Windows</Name>
     </ProjectReference>
     <ProjectReference Include="..\Kingo\02.Kingo.csproj">
       <Project>{c2f7d41b-e748-4ec4-8ad4-0a7e25d7cdc0}</Project>
