--- a/src/Kingo.Windows.Tests/02.Kingo.Windows.Tests.csproj
+++ b/src/Kingo.Windows.Tests/02.Kingo.Windows.Tests.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -52,6 +56,7 @@
       <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
@@ -73,6 +78,9 @@
     <Compile Include="MSTestEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Windows\AngleTest.cs" />
+    <Compile Include="Windows\Media3D\ControlModeInputBindingSpy.cs" />
+    <Compile Include="Windows\Media3D\ControlModeInputBindingTest.cs" />
+    <Compile Include="Windows\Media3D\ControlModeTest.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerBehaviorTest.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerTest.cs" />
   </ItemGroup>
