Implemented ControlModeInputBinding class.

--- a/src/Kingo.Windows.Tests/02.Kingo.Windows.Tests.csproj
+++ b/src/Kingo.Windows.Tests/02.Kingo.Windows.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Windows\Media3D\ControlModeInputBindingTest.cs" />
     <Compile Include="Windows\Media3D\ControlModeTest.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerBehaviorTest.cs" />
+    <Compile Include="Windows\Media3D\ProjectionCameraControllerCommandSpy.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
