--- a/src/Kingo.Windows/03.Kingo.Windows.csproj
+++ b/src/Kingo.Windows/03.Kingo.Windows.csproj
@@ -70,6 +70,8 @@
     </Compile>
     <Compile Include="Angle.cs" />
     <Compile Include="Windows\Command.T1.cs" />
+    <Compile Include="Windows\IFocusManager.cs" />
+    <Compile Include="Windows\FocusWatcher.cs" />
     <Compile Include="Windows\Media3D\AlphaBetaGammaRotationSet.cs" />
     <Compile Include="Windows\Media3D\AlphaBetaRotationSet.cs" />
     <Compile Include="Windows\Media3D\AlphaRotationSet.cs" />
@@ -77,10 +79,13 @@
     <Compile Include="Windows\Media3D\ControlModeInputBinding.cs" />
     <Compile Include="Windows\Media3D\EulerAngleRotationSet.cs" />
     <Compile Include="Windows\Media3D\IProjectionCameraController.cs" />
-    <Compile Include="Windows\Media3D\IProjectionCameraControllerCommand.cs" />
+    <Compile Include="Windows\Media3D\IProjectionCameraCommand.cs" />
+    <Compile Include="Windows\Media3D\KeyDownBinding.cs" />
+    <Compile Include="Windows\Media3D\MoveCommand.cs" />
+    <Compile Include="Windows\Media3D\MoveLeftRightCommand.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraController.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerBehavior.cs" />
-    <Compile Include="Windows\Media3D\ProjectionCameraControllerCommand.T1.cs" />
+    <Compile Include="Windows\Media3D\ProjectionCameraCommand.T1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Kingo.snk">
