--- a/src/Kingo.Windows/03.Kingo.Windows.csproj
+++ b/src/Kingo.Windows/03.Kingo.Windows.csproj
@@ -78,18 +78,20 @@
     <Compile Include="Windows\Media3D\ControlMode.cs" />
     <Compile Include="Windows\Media3D\ControlModeCommandBinding.cs" />
     <Compile Include="Windows\Media3D\ControlModeCommandBinding.T1.cs" />
+    <Compile Include="Windows\Media3D\DebugCameraController.cs" />
     <Compile Include="Windows\Media3D\EulerAngleRotationSet.cs" />
     <Compile Include="Windows\Media3D\IControlModeCommandBinding.cs" />
     <Compile Include="Windows\Media3D\IProjectionCameraController.cs" />
-    <Compile Include="Windows\Media3D\IProjectionCameraCommand.cs" />
     <Compile Include="Windows\Media3D\MouseOrbitBinding.cs" />
     <Compile Include="Windows\Media3D\KeyCommandBinding.cs" />
     <Compile Include="Windows\Media3D\MouseWheelCommandBinding.cs" />
     <Compile Include="Windows\Media3D\MouseWheelEvent.cs" />
     <Compile Include="Windows\Media3D\MoveBuilder.cs" />
+    <Compile Include="Windows\Media3D\OrbitCommandBinding.cs" />
+    <Compile Include="Windows\Media3D\ProjectCameraControllerDecorator.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraController.cs" />
+    <Compile Include="Windows\Media3D\ProjectionCameraControllerBase.cs" />
     <Compile Include="Windows\Media3D\ProjectionCameraControllerBehavior.cs" />
-    <Compile Include="Windows\Media3D\ProjectionCameraCommand.T1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Kingo.snk">
