--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -93,6 +93,8 @@
     <Compile Include="Equatable.cs" />
     <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="DynamicMethods\GetHashCodeMethod.T1.cs" />
+    <Compile Include="Messaging\ConcurrencyException.cs" />
+    <Compile Include="Messaging\ConflictException.cs" />
     <Compile Include="Messaging\EventStream.cs" />
     <Compile Include="Messaging\EventStreamImplementation.cs" />
     <Compile Include="Messaging\ExecuteAsyncMethod.T1.cs" />
@@ -256,7 +258,7 @@
     <Compile Include="Messaging\Validation\Constraints\StringConstraints.Matches.cs" />
     <Compile Include="Messaging\Validation\Constraints\StringConstraints.StartsWith.cs" />
     <Compile Include="Messaging\Validation\Constraints\ErrorInfoBuilder.cs" />
-    <Compile Include="Messaging\MicroProcessorException.cs" />
+    <Compile Include="Messaging\ExternalProcessorException.cs" />
     <Compile Include="Messaging\Validation\InvalidMessageException.cs" />
     <Compile Include="Messaging\Validation\MessageValidationPipeline.cs" />
     <Compile Include="Messaging\Validation\NullValidator.cs" />
