--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -95,6 +95,19 @@
     <Compile Include="DynamicMethods\GetHashCodeMethod.T1.cs" />
     <Compile Include="Messaging\ConcurrencyException.cs" />
     <Compile Include="Messaging\ConflictException.cs" />
+    <Compile Include="Messaging\Domain\AggregateRoot.T2.cs" />
+    <Compile Include="Messaging\Domain\Event.cs" />
+    <Compile Include="Messaging\Domain\Event.T2.cs" />
+    <Compile Include="Messaging\Domain\EventPublishedEventArgs.cs" />
+    <Compile Include="Messaging\Domain\EventPublishedEventArgs.T1.cs" />
+    <Compile Include="Messaging\Domain\IAggregateRoot.cs" />
+    <Compile Include="Messaging\Domain\IAggregateRoot.T1.cs" />
+    <Compile Include="Messaging\Domain\IEvent.cs" />
+    <Compile Include="Messaging\Domain\IEvent.T2.cs" />
+    <Compile Include="Messaging\Domain\ISnapshot.cs" />
+    <Compile Include="Messaging\Domain\ISnapshot.T2.cs" />
+    <Compile Include="Messaging\Domain\Snapshot.cs" />
+    <Compile Include="Messaging\Domain\Snapshot.T2.cs" />
     <Compile Include="Messaging\EventStream.cs" />
     <Compile Include="Messaging\EventStreamImplementation.cs" />
     <Compile Include="Messaging\ExecuteAsyncMethod.T1.cs" />
