--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -93,19 +93,28 @@
     <Compile Include="Equatable.cs" />
     <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="DynamicMethods\GetHashCodeMethod.T1.cs" />
-    <Compile Include="Messaging\ConcurrencyException.cs" />
+    <Compile Include="Messaging\Domain\ChangeSet.T1.cs" />
+    <Compile Include="Messaging\Domain\ConcurrencyException.cs" />
     <Compile Include="Messaging\ConflictException.cs" />
+    <Compile Include="Messaging\Domain\AggregateData.T1.cs" />
+    <Compile Include="Messaging\Domain\AggregateNotFoundException.cs" />
     <Compile Include="Messaging\Domain\AggregateRoot.T2.cs" />
+    <Compile Include="Messaging\Domain\DuplicateKeyException.cs" />
     <Compile Include="Messaging\Domain\Event.cs" />
     <Compile Include="Messaging\Domain\Event.T2.cs" />
     <Compile Include="Messaging\Domain\EventPublishedEventArgs.cs" />
     <Compile Include="Messaging\Domain\EventPublishedEventArgs.T1.cs" />
     <Compile Include="Messaging\Domain\IAggregateRoot.cs" />
     <Compile Include="Messaging\Domain\IAggregateRoot.T1.cs" />
+    <Compile Include="Messaging\Domain\IChangeSet.T1.cs" />
     <Compile Include="Messaging\Domain\IEvent.cs" />
     <Compile Include="Messaging\Domain\IEvent.T2.cs" />
+    <Compile Include="Messaging\Domain\IRepository.T2.cs" />
     <Compile Include="Messaging\Domain\ISnapshot.cs" />
     <Compile Include="Messaging\Domain\ISnapshot.T2.cs" />
+    <Compile Include="Messaging\Domain\MemoryRepository.T2.cs" />
+    <Compile Include="Messaging\Domain\Repository.T2.cs" />
+    <Compile Include="Messaging\Domain\UnitOfWork.T2.cs" />
     <Compile Include="Messaging\Domain\Snapshot.cs" />
     <Compile Include="Messaging\Domain\Snapshot.T2.cs" />
     <Compile Include="Messaging\EventStream.cs" />
