--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -142,7 +142,7 @@
     <Compile Include="Messaging\MessageHandlerDecorator.T1.cs" />
     <Compile Include="Messaging\MessageHandlerConnector.T1.cs" />
     <Compile Include="Messaging\MessageHandlerFactory.cs" />
-    <Compile Include="Messaging\MessageHandlerLifetime.cs" />
+    <Compile Include="Messaging\InstanceLifetime.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.T1.cs" />
     <Compile Include="Messaging\MessageHandlerWrapper.T1.cs" />
     <Compile Include="Messaging\MessageStackTrace.cs" />
@@ -172,7 +172,7 @@
     <Compile Include="Messaging\UnitOfWorkController.cs" />
     <Compile Include="Messaging\UnitOfWorkCache.cs" />
     <Compile Include="Messaging\UnitOfWorkControllerImplementation.cs" />
-    <Compile Include="Messaging\UnityFactory.cs" />
+    <Compile Include="Messaging\UnityContainerFactory.cs" />
     <Compile Include="Messaging\UnprocessableEntityException.cs" />
     <Compile Include="Messaging\Validation\Command.cs" />
     <Compile Include="EnumOperators.T1.cs" />
